Add Staff SSO admin login integration.

--- a/sample.env
+++ b/sample.env
@@ -37,3 +37,13 @@ COMPOSE_PROJECT_NAME=data-hub
 #SUPERUSER_PASSWORD=foobarbaz
 DATA_FLOW_API_ACCESS_KEY_ID=data-flow-api-id
 DATA_FLOW_API_SECRET_ACCESS_KEY=data-flow-api-access-key
+
+# OAuth2 settings for Django Admin access
+
+ADMIN_OAUTH2_ENABLED=False
+ADMIN_OAUTH2_TOKEN_FETCH_URL=http://localhost:8100/o/token
+ADMIN_OAUTH2_USER_PROFILE_URL=
+ADMIN_OAUTH2_AUTH_URL=http://localhost:8100/o/authorize
+ADMIN_OAUTH2_CLIENT_ID=oauth2-client-id
+ADMIN_OAUTH2_CLIENT_SECRET=oauth2-secret-id
+ADMIN_OAUTH2_REDIRECT_URL=http://localhost:8000/oauth/callback
